      we have no cached directory info. This means Tor clients can now
      do all of their connections protected by TLS.
    - Add an HSAuthorityRecordStats option that hidden service authorities
      can use to track statistics of overall hidden service usage without
      logging information that would be very useful to an attacker.

  o Security fixes:
    - Directory authorities now call routers stable if they have an
      uptime of at least 30 days, even if that's not the median uptime
      in the network. Implements proposal 107, suggested by Kevin Bauer
      and Damon McCoy.

  o Minor fixes (resource management):
    - Count the number of open sockets separately from the number of active
      connection_t objects.  This will let us avoid underusing our
      allocated connection limit.
    - We no longer use socket pairs to link an edge connection to an
      anonymous directory connection.  Instead, we track the link
      internally and transfer the data in-process.  This saves two
      sockets per anonymous directory connection (at the client and at
      the server), and avoids the nasty Windows socketpair() workaround.
    - Keep unused 4k buffers on a free list, rather than wasting 8k for every
      single inactive connection_t.

  o Minor features (build):
    - Make autoconf search for libevent, openssl, and zlib consistently.
    - Update deprecated macros in configure.in
    - When warning about missing headers, tell the user to let us
      know if the compile succeeds anyway, so we can downgrade the
      warning.
    - Include the current subversion revision as part of the version
      string: either fetch it directly if we're in an SVN checkout, do
      some magic to guess it if we're in an SVK checkout, or use
      the last-detected version if we're building from a .tar.gz.

  o Minor features (logging):
    - Always prepend "Bug: " to any log message about a bug.
    - Put a platform string (e.g. "Linux i686") in the startup log